# rna_kg_fold

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: config.yaml
data/: schema.py
notebooks/: w1_t02a_eda.ipynb
reports/: rna3db_diff_report.md
scripts/w1_t02a/: build_metadata.py  download_rna3db.py  parse_chains.py  run.sh  validate.py
tests/: test_dummy.py  test_versions.py
