[project]
name = "rna-kg-fold"
version = "0.1.0"
description = "RNA Knowledge Graph + Folding Prediction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.*",
    "pytorch-lightning==2.4.*",
    "hydra-core==1.3.*",
    "wandb",
    "biopython",
    "torch-geometric",
    "e3nn>=0.5.0,<0.6.0",
    "networkx",
    "rdkit",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.10,<2.0",
    "ruff>=0.4",
    "pre-commit",
    "nbstripout",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
